@@ -72,7 +72,7 @@ examples/beginner/04_texts_and_boxes
 examples/beginner/05_mouse
 examples/beginner/06_keyboard
 examples/beginner/07_input_box
-examples/beginner/08_mouse_keyboard_timer
+examples/beginner/08_mouse_keyboard_input_box_timer
 examples/beginner/09_colors
 examples/beginner/10_library_informations
 examples/beginner/11_turtle
